Attempt to fix the backdrop display on iPhone

--- a/styles/index.css
+++ b/styles/index.css
@@ -203,7 +203,6 @@ a {
    .logo {
       width: 40px;
       height: 40px;
-      z-index: 5;
    }
 
    .nav-items {
@@ -220,12 +219,14 @@ a {
       transition: all 1s ease-in-out;
       height: 100%;
       z-index: 3;
+      -webkit-appearance: none;
+      backdrop-filter: blur(30px);
+      -webkit-backdrop-filter: blur(0px);
    }
 
    .nav-items.show {
       opacity: 1;
       transform: translateY(0);
-      backdrop-filter: blur(30px);
    }
 
    .nav-link {
@@ -234,7 +235,7 @@ a {
 
    .mb-menu {
       display: block;
-      z-index: 5;
+      z-index: 4;
    }
 
    .home_main_container {
